fixed styles and spacing in header-info component

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,4 @@
 .App {
-  text-align: center;
   margin: 0;
   background-image: url("https://images.unsplash.com/photo-1581833971358-2c8b550f87b3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1351&q=80");
   display: flex;
