--- a/client/src/components/styles/result-header.css
+++ b/client/src/components/styles/result-header.css
@@ -1,7 +1,6 @@
 .result-info-container {
     display: flex;
     flex-direction: row;
-    padding: 10px;
 }
 
 @media (max-width: 700px){
@@ -11,7 +10,12 @@
 }
 
 .result-info {
-    margin: 20px;
+    margin-top: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: flex-start;
+    padding: 10px;
 }
 
 .result-header-img {
@@ -23,10 +27,27 @@
     padding: 10px;
     width: 100%;
     display: flex;
+    flex-direction: column;
+    min-width: 300px;
+    max-width: 350px;
+}
+
+.info-item {
+    width: 100%;
+    display: flex;
+    margin: 7px 0;
+}
+
+.info-item-background {
+    width: 100%;
+    margin: 5px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
 
 @media (max-width: 700px){
     .result-header-paper {
-        flex-direction: column;
+        max-width: 100%;
     }
 }
